SCSS refactor, carousel shift fixed

--- a/public/scss/homepage.scss
+++ b/public/scss/homepage.scss
@@ -100,11 +100,17 @@ body {
  *
  ********************/
  ul#memory-carousel {
- 	margin: $side-padding-base * 2 0;
- 	padding: 0;
 	height: 100px;
-	-webkit-transition:  margin 1s;
-    transition: margin 1s;
+    position: relative;
+	top: 0;
+	margin: 0;
+	display: -webkit-flex;
+	-webkit-flex-direction: row-reverse;
+	-webkit-justify-content: flex-start;
+	right: 0px;
+	.memory {
+		-webkit-flex-shrink: 0;
+	}
  	li {
  		display: inline-block;
  		height: 100px;
@@ -112,12 +118,19 @@ body {
  		padding: 0 5px;
  	}
  }
-  ul#memory-carousel.shifted {
-  	margin-top: $side-padding-base * 4;
-  	margin-bottom: 0;
+#scrollwrapper {
+	position: relative;
+	margin: 100px 0;
+	overflow-x: hidden;
 	-webkit-transition:  margin 1s;
     transition: margin 1s;
-  }
+	&.shifted {
+	  	margin-top: $side-padding-base * 4;
+	  	margin-bottom: 0;
+		-webkit-transition:  margin 1s;
+	    transition: margin 1s;
+	  }
+}
 
 /********************
  *
@@ -283,24 +296,4 @@ footer {
 		margin-top: 15px;
 		font-style: italic;
 	}
-}
-
-#scrollwrapper {
-	position: relative;
-	margin: 100px 0;
-	overflow-x: hidden;
-}
-
-ul#memory-carousel {
-	position: relative;
-	top: 0;
-	margin: 0;
-	display: -webkit-flex;
-	-webkit-flex-direction: row-reverse;
-	-webkit-justify-content: flex-start;
-	right: 0px;
-}
-
-ul#memory-carousel .memory {
-	-webkit-flex-shrink: 0;
 }
